# ludownloader

./: .gitignore  Cargo.toml  README.md  openapi.yaml  package.json  tailwind.config.cjs
.github/workflows/: ci.yml  rust.yml  tauri.yml
account-manager/: Cargo.toml
app/: index.html
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/tests/: main_test.rs
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml  build.rs
backend/api/src/: proto.rs
backend/data/: Cargo.toml  build.rs
backend/data/src/: types.rs
backend/downloader/: Cargo.toml
backend/downloader/src/: lib.rs
backend/downloader/src/httpdownload/: mod.rs  observer.rs
backend/downloader/src/httpdownload/download/: config.rs  mod.rs
backend/downloader/src/httpdownload/manager/: inner.rs  item.rs  mod.rs
backend/downloader/src/util/: mod.rs
backend/server/: Cargo.toml  build.rs
backend/server/src/: lib.rs  main.rs  mod.rs  routes.rs  settings.rs
backend/server/src/api/: mod.rs
backend/server/src/routes/: mod.rs
backend/server/tests/: test_create_download.rs  test_httpdownload.rs
download/: Cargo.toml
download-manager/: Cargo.toml
download-manager/src/: lib.rs
download/src/: api.rs  download_config.rs  httpdownload.rs  httpdownload_config.rs  lib.rs
downloader/: Cargo.toml
downloader/src/: constants.rs  download.rs  httpdownload.rs  lib.rs  util.rs
downloader/src/download/: mod.rs
downloader/src/httpdownload/: manager.rs  mod.rs
downloader/src/httpdownload/download/: mod.rs
downloader/src/httpdownload/manager/: item.rs  mod.rs
downloader/src/util/: mod.rs
httpdownload/: Cargo.toml
httpdownload/src/: constants.rs  download.rs  download_config.rs  lib.rs  util.rs
proto/: foo.proto  httpdownload.proto  ludownloader.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  routes.rs  settings.rs
server/src/routes/: mod.rs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.svelte
src/styles/: style.sass
