[package]
name = "download-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
download = { path = "../download" }
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
