[package]
name = "downloader"
version = "0.1.0"
authors = ["Lurian <lurian-code@protonmail.com>"]
repository = "https://github.com/lur1an/ludownloader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
directories = "4.0.1"
env_logger = "0.10.0"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["stream", "blocking"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.21.2", features = ["full"] }
tempfile = "3.3.0"
test-log = "0.2.11"


[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"

