[package]
name = "httpdownload"
version = "0.1.0"
authors = ["Lurian <lurian-code@protonmail.com>"]
repository = "https://github.com/lur1an/ludownloader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

directories = "4.0.1"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["stream", "blocking"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tokio = { version = "1.21.2", features = ["full"] }


[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"
