[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
bytes = "1.4.0"
downloader = { path = "../downloader" }
env_logger = "0.10.0"
log = "0.4.18"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
test-log = "0.2.11"

[build-dependencies]
prost-build = { version =  "0.11.9" }
