[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
prost = "0.11.9"
prost-types = "0.11.9"
[build-dependencies]
prost-build = { version =  "0.11.9" }
