[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
axum = "0.6.18"
bytes = "1.4.0"
downloader = { path = "../downloader" }
api = { path = "../api" }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
test-log = "0.2.11"
serde_yaml = "0.9.21"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
dirs = "5.0.1"
async-trait = "0.1.68"
prost = "0.11.9"
prost-types = "0.11.9"
reqwest = "0.11.18"

