[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[build-dependencies]
schema2code = "0.1.3"
serde_yaml = "0.9.25"

[dependencies]
bytes = "1.4.0"
downloader = { path = "../downloader" }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
test-log = "0.2.11"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
dirs = "5.0.1"
serde_yaml = "0.9.25"
async-trait = "0.1.68"
reqwest = { version="0.11.18", features = ["json"]}
test-context = "0.1.4"
axum = { version = "0.6.18", features = ["macros"] }
anyhow = "1.0.75"
arc-swap = "1.6.0"

